minor changes in style

--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,9 @@
 }
 .calculator {
   display: inline-block;
-  border: 0.25px solid blue;
   background-color: #2a282a;
   border-radius: 10px;
-  padding: 5px 0px 5px 0px;
+  padding: 5px 0px 0px 0px;
 }
 .display {
   margin: 1px;
@@ -17,12 +16,11 @@
   background-color: rgba(42, 40, 42, 0.1);
 }
 .keypad {
-  border: 0.25px solid black;
   display: inline-grid;
   grid-template-columns: repeat(10, 1fr); /* 10 columns */
   grid-template-rows: repeat(5, 1fr); /* 6 rows */
   grid-column-gap: 1px; /* Adjust gap between grid items as needed */
-  grid-row-gap: 2px;
+  grid-row-gap: 1px;
   justify-content: space-evenly;
   align-content: space-evenly;
   text-align: center;
@@ -35,9 +33,21 @@
   color: aliceblue;
   background-color: #3f3d3f;
   padding: 5px 10px 5px 10px;
-  border: 0.05px solid black;
+  /* border: 0.05px solid black; */
 }
 
 .arithematic {
   background-color: #ff9f0a;
+}
+.number,
+.dot {
+  background-color: #5f5d5f;
+}
+
+#equalto {
+  border-bottom-right-radius: 10px;
+}
+
+#angle {
+  border-bottom-left-radius: 10px;
 }
