--- a/styles.css
+++ b/styles.css
@@ -13,116 +13,251 @@ html {
   body {
     zoom: 1.5; /* 150% zoom */
   }
-}
-.calculator {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: inline-block;
-  background-color: #2a282a;
-  border-radius: 10px;
-  padding: 5px 0px 0px 0px;
-  border: 1px solid rgb(165, 164, 166);
-  box-shadow: 0px 4px 6px rgba(23, 23, 23, 0.5);
-}
-.topbar {
-  display: inline;
-  padding-top: 0px;
-  padding-left: 10px;
-}
-.mac_buttons {
-  display: inline-block;
-  height: 10px;
-  width: 10px;
-  border-radius: 11px;
-}
-.red-button {
-  background-color: #ff5f57;
-}
 
-.yellow-button {
-  background-color: #febc2e;
-}
+  .calculator {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: inline-block;
+    background-color: #2a282a;
+    border-radius: 10px;
+    padding: 5px 0px 0px 0px;
+    border: 1px solid rgb(165, 164, 166);
+    box-shadow: 0px 4px 6px rgba(23, 23, 23, 0.5);
+  }
+  .topbar {
+    display: inline;
+    padding-top: 0px;
+    padding-left: 10px;
+  }
+  .mac_buttons {
+    display: inline-block;
+    height: 10px;
+    width: 10px;
+    border-radius: 11px;
+  }
+  .red-button {
+    background-color: #ff5f57;
+  }
 
-.green-button {
-  background-color: #28c840;
-}
-.message {
-  padding: 1px 5px 1px 5px;
-  margin-right: 5px;
-  position: absolute;
-  right: 0;
-  display: inline;
-  font-size: small;
-  background-color: #3f3d3f;
-}
+  .yellow-button {
+    background-color: #febc2e;
+  }
 
-.display {
-  margin: 0px 1px 1px 1px;
-  display: flex;
-  height: 5vh;
-  border-radius: 10px;
-  justify-content: flex-end;
-  background-color: rgba(42, 40, 42, 0.1);
-  padding: 0px 10px 15px 10px;
-  color: white;
-  font: inherit;
-  font-size: 40px;
-}
-.keypad {
-  display: inline-grid;
-  font: inherit;
-  grid-template-columns: repeat(10, 1fr); /* 10 columns */
-  grid-template-rows: repeat(5, 1fr); /* 6 rows */
-  grid-column-gap: 1px; /* Adjust gap between grid items as needed */
-  grid-row-gap: 1px;
-  justify-content: space-evenly;
-  align-content: space-evenly;
-  text-align: center;
-}
+  .green-button {
+    background-color: #28c840;
+  }
+  .message {
+    padding: 1px 5px 1px 5px;
+    margin-right: 5px;
+    position: absolute;
+    right: 0;
+    display: inline;
+    font-size: small;
+    background-color: #3f3d3f;
+  }
 
-.keys {
-  display: block;
-  /* height: 40px;
+  .display {
+    margin: 0px 1px 1px 1px;
+    display: flex;
+    height: 5vh;
+    border-radius: 10px;
+    justify-content: flex-end;
+    background-color: rgba(42, 40, 42, 0.1);
+    padding: 0px 10px 15px 10px;
+    color: white;
+    font: inherit;
+    font-size: 40px;
+  }
+  .keypad {
+    display: inline-grid;
+    font: inherit;
+    grid-template-columns: repeat(10, 1fr); /* 10 columns */
+    grid-template-rows: repeat(5, 1fr); /* 6 rows */
+    grid-column-gap: 1px; /* Adjust gap between grid items as needed */
+    grid-row-gap: 1px;
+    justify-content: space-evenly;
+    align-content: space-evenly;
+    text-align: center;
+  }
+
+  .keys {
+    display: block;
+    /* height: 40px;
   width: 40px; */
-  color: aliceblue;
-  background-color: #3f3d3f;
-  padding: 5px 10px 5px 10px;
-  /* border: 0.05px solid black; */
-}
-.keys.active {
-  background-color: #5f5d5f;
+    color: aliceblue;
+    background-color: #3f3d3f;
+    padding: 5px 10px 5px 10px;
+    /* border: 0.05px solid black; */
+  }
+  .keys.active {
+    background-color: #5f5d5f;
+  }
+
+  .keys.number.active {
+    background-color: hsl(0, 0%, 71%); /* Change background color when active */
+  }
+
+  .arithematic {
+    background-color: #ff9f0a;
+  }
+  .keys.arithematic.active {
+    background-color: #cb7d06;
+  }
+
+  .number,
+  .dot {
+    background-color: #5f5d5f;
+  }
+
+  #equalto {
+    border-bottom-right-radius: 10px;
+    background-color: #3f3d3f;
+  }
+  .active#equalto {
+    background-color: #5f5d5f;
+  }
+
+  #angle {
+    border-bottom-left-radius: 10px;
+  }
+
+  .message {
+    border-radius: 10px;
+  }
+  .pseudo-footer {
+    display: none;
+    height: 0;
+    width: 0;
+  }
 }
 
-.keys.number.active {
-  background-color: hsl(0, 0%, 71%); /* Change background color when active */
-}
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: black;
+    color: #ffffff;
+  }
+  .calculator {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+  }
+  .display {
+    height: 11.6vh;
+    width: 100vw;
+    display: flex;
+    text-align: end;
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 4.5rem;
+  }
 
-.arithematic {
-  background-color: #ff9f0a;
-}
-.keys.arithematic.active {
-  background-color: #cb7d06;
-}
-
-.number,
-.dot {
-  background-color: #5f5d5f;
-}
-
-#equalto {
-  border-bottom-right-radius: 10px;
-  background-color: #3f3d3f;
-}
-.active#equalto {
-  background-color: #5f5d5f;
-}
-
-#angle {
-  border-bottom-left-radius: 10px;
-}
-
-.message {
-  border-radius: 10px;
+  .keypad {
+    /* border: 1px solid white; */
+    height: 57vh;
+    width: 100vw;
+    /* height out of 91 of vh */
+    display: inline-grid;
+    font: inherit;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto auto auto auto;
+    justify-content: space-around;
+    align-content: space-around;
+    text-align: center;
+  }
+  .keys {
+    display: none;
+    width: 0;
+    height: 0;
+    order: 1000;
+  }
+  .topButtons,
+  .number,
+  .arithematic,
+  #dot,
+  #equalto {
+    display: flex;
+    /* padding: 2.9vh 9.1vw; */
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    height: 8.75vh;
+    width: 18.35vw;
+    /* border: 1px solid white; */
+    background-color: #333333;
+    background: #333333;
+    border-radius: 40vw;
+    color: white;
+    font-size: 1.5rem;
+  }
+  .topButtons {
+    background-color: #a5a5a5;
+    color: black;
+    order: 1;
+  }
+  .topButtons.active {
+    background-color: #ffffff;
+  }
+  .arithematic,
+  #equalto {
+    background-color: #ff9f0a;
+  }
+  .arithematic.active,
+  .active#equalto {
+    background-color: #ffffff;
+    color: #ff9f0a;
+  }
+  #divide {
+    order: 2;
+  }
+  .number {
+    order: 3;
+  }
+  .number.active,
+  .dot.active {
+    background-color: #737373;
+  }
+  #multiply {
+    order: 4;
+  }
+  .num-row-2 {
+    order: 5;
+  }
+  #minus {
+    order: 6;
+  }
+  .num-row-1 {
+    order: 7;
+  }
+  #plus {
+    order: 8;
+  }
+  #num0 {
+    order: 9;
+    grid-column: 1 / span 2;
+    width: 44.25vw;
+    justify-content: start;
+    padding-left: 15%;
+  }
+  #dot,
+  #equalto {
+    order: 10;
+  }
+  .pseudo-footer {
+    height: 6.9vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+  }
+  .pseudo-footer > .iphone-bottom-bar {
+    height: 0.6vh;
+    width: 50vw;
+    border-radius: 0.3vh;
+    color: #ffffff;
+    background: #ffffff;
+  }
 }
